<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">valeyou provider</string>
    <string name="error_found">Error</string>
    <string name="network_error">Network error</string>
    <string name="space"> </string>
    <string name="block_account">Block Account</string>
    <string name="block_text">Blocked ? Blocked providers cannot see your activities or send you messages.</string>
    <string name="signup">Sign Up With Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="log_in">Login</string>
    <string name="log_in_button">Login</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="forgot_password_title">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password*</string>
    <string name="email_id">Email Id</string>
    <string name="wait">Please wait...</string>
    <string name="sign_in">Sign In</string>
    <string name="have_an_account">Have an account?</string>
    <string name="email">Email*</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="phone">Phone*</string>
    <string name="submit">Submit</string>
    <string name="temporary_password_will_be_send_on_your_registered_email_id">Temporary password will be send on your registered email id</string>
    <string name="home">Home</string>
    <string name="mym">myM</string>
    <string name="products">Products</string>
    <string name="restaurant">Restaurant</string>
    <string name="more">More</string>
    <string name="back_press">Back press again for exit</string>
    <string name="next">Next</string>
    <string name="get_started">Lets go!</string>
    <string name="welcome_back_guy">Welcome back, Guy!</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="experience_like_never_before">Experience Like Never Before</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="about_forget_pass">Please enter your email below to receive\nyou password reset instructions</string>
    <string name="recover_details">Reset code was sent to your email. Please enter\nthe code and create new password.</string>
    <string name="code">Code</string>
    <string name="change_password">Change Password</string>
    <string name="account">Account</string>
    <string name="age">Date Of Birth</string>
    <string name="address">Address*</string>
    <string name="about">About</string>
    <string name="slect_resource">Select Category</string>
    <string name="my_services">My Services</string>
    <string name="ok">Ok</string>
    <string name="languages">Languages</string>
    <string name="education">Education</string>
    <string name="experience">Experience</string>
    <string name="edit_languages"> Edit Languages</string>
    <string name="certificate">Add Certificate</string>
    <string name="businesshours">Business Hours</string>
    <string name="portfolio">Portfolio</string>
    <string name="identity">Upload Identity</string>
    <string name="cancel">Cancel</string>
    <string name="plz_wait">Please Wait</string>
    <string name="logout_text">Are you sure you want to logout ? </string>
    <string name="start_job">Are you sure you want to start this job? </string>
    <string name="end_job">Are you sure you want to end this job ? </string>
    <string name="review_txt">Review </string>
    <string name="time_spend_txt">Total Time Spend </string>
    <string name="otp_text">OTP Verification</string>
    <string name="policy_terms">"I accept the <a href='http://valeyou.com.br/privacy-policy'>Privacy Policy</a> and <a href='http://valeyou.com.br/privacy-policy'>Terms &amp; Conditions.</a>"</string>
    <string name="facebook_app_id">2617191828542329</string>
    <string name="fb_login_protocol_scheme">fb2617191828542329</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="weak">Weak</string>
    <string name="medium">Medium</string>
    <string name="strong">Strong</string>
    <string name="very_strong">Very Strong</string>
    <string name="choose_your_perefered_language">Choose Your Perefered Language</string>
    <string name="select_your_language">Please select your language</string>
    <string name="stripe_text">Payments-Connect to Stripe</string>
    <string name="notifications">Notifications</string>
    <string name="select_language">Select Language</string>
    <string name="blocked_contacts">Blocked Contacts</string>
    <string name="terms">Privacy Policy/ \nTerms and Conditions</string>
    <string name="help_support">Help And Support</string>
    <string name="about_us">About US</string>
    <string name="already_connected">Already Connected</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="identity_verfication">Identity Verification</string>
    <string name="my_account">My Account</string>
    <string name="deactivate_description">If you are deactivating your account, make sure that you still have access to the email address you use to login. That way you can easily reactivate your account by logging back in.</string>
    <string name="delete_description">Deleting your account will remove all of your information from our database.</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout_account">Logout</string>
    <string name="viewprofile">View Profile</string>
    <string name="welcome">Welcome,</string>
    <string name="distance">Distance</string>
    <string name="region">Region</string>
    <string name="distance_any">Distance \nAny+</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="sub_cats">Subcategorias</string>
    <string name="cancel_btn">Voltar</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="view_on_map">View On Map</string>
    <string name="remotejob">Remote Jobs</string>
    <string name="localjobs">Local Jobs</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="select_city">City</string>
    <string name="select_state">State</string>
    <string name="deactivate_success">Your account is deactivated! Please login back to reactivate.</string>
    <string name="open">Open</string>
    <string name="upcoming">Upcoming</string>
    <string name="cancelled">Cancelled</string>
    <string name="ongoing">Ongoing</string>
    <string name="compelted">Completed</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="my_jobs">My Jobs</string>
    <string name="message">Message</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="email_already_linked_with_another_account">Email is already linked with another account</string>
    <string name="password_validation_text">Password should contain min of 8 characters and at least 1 lowercase, 1 uppercase and 1 numeric value</string>
    <string name="enter_first_name">Please enter first name</string>
    <string name="enter_last_name">Please enter last name</string>
    <string name="enter_email">Please enter email</string>
    <string name="valid_email">Please enter valid email</string>
    <string name="enter_phone_number">Please enter phone number</string>
    <string name="accept_privacy_policy">Please accepts privacy policy</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_min_password">Password must be of atleast 6 character</string>
    <string name="both_password_must_be_matched">Both password must be matched</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_the_otp_you_recive_at">Enter the OTP you recieve to</string>
    <string name="enter_date_of_birth">Please select valid date of birth.</string>
    <string name="please_select_address">Please select address</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="house_no">House Number</string>
    <string name="appartment">Apartment</string>
    <string name="street">Street</string>
    <string name="zip_code">Zip Code</string>
    <string name="description">Description</string>
    <string name="plsease_select_atleast_one_category">Please select atleast one sub category.</string>
    <string name="enter_security_number">Enter Social Security Number</string>
    <string name="enter_license_number">Add your License Image</string>
    <string name="placed_bids">Placed</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="conf_new_password">Confirm New Password</string>
    <string name="old_password_dosent_match">Old Password does not exist.</string>
    <string name="we_are_here_to_help">We are here to Help!</string>
    <string name="block">Block</string>
    <string name="write_something_here">Write something here</string>
    <string name="you_unblocked">You unblocked </string>
    <string name="you_blocked">You Blocked </string>
    <string name="unblock">Unblock</string>
    <string name="you_blocked_this_user">You blocked this user</string>
    <string name="your_have_blocked">You have blocked!</string>
    <string name="blocked_you"> Blocked you</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="addcertificate">Add Certificate</string>
    <string name="title">Title</string>
    <string name="enter_bref_des">Enter Brioef But Descriptive Title</string>
    <string name="enter_description">Enter Your Description</string>
    <string name="upload_certificate">Upload Certificate</string>
    <string name="edit_certificate">Edit Certificate</string>
    <string name="enter_title">Please enter title</string>
    <string name="choose_your_certificate">Please choose your certificate</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="please_enter_your_school_name">Please enter your school name</string>
    <string name="enter_your_degree_name">Please enter your degree name</string>
    <string name="enter_your_degree_start_date">Please select your degree start date</string>
    <string name="enter_your_degree_end_date">Please select your degree end date</string>
    <string name="school"> School </string>
    <string name="degree"> Degree </string>
    <string name="start_year">Start Year</string>
    <string name="end_year">End Year</string>
    <string name="grade">Grade(Optional)</string>
    <string name="enter_your_role">Please enter your role</string>
    <string name="select_employee_type">Please select Employment Type</string>
    <string name="enter_company_name">Please Enter your company name</string>
    <string name="enter_company_lcoation">Please enter your company\'s location</string>
    <string name="start_date">Please enter start date</string>
    <string name="enter_end_date">Please enter end date</string>
    <string name="employee_type">Employment Type</string>
    <string name="company_name">Company Name</string>
    <string name="password_validate">Password should contain min of 8 characters and at least 1 lowercase, 1 uppercase and 1 numeric value</string>
    <string name="signup_btn">Next</string>
    <string name="no">No</string>
    <string name="no_access_charge">No Access Charge</string>
    <string name="apply_charges_for_no_access">Apply 10 % charges on Order amount for no access</string>
</resources>