<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:gravity="center"
    android:layout_height="match_parent">

    <TextView android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub_cats"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:padding="10dp"
        android:textSize="17sp"
        android:gravity="center"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/title"
        android:layout_gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recycler_view"
        android:orientation="horizontal">

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/cancel"
            android:background="@color/grey_light"
            android:textColor="@color/black"
            android:id="@+id/cancel"
            />
        <View android:layout_width="2dp" android:layout_height="match_parent"
            android:background="#fff"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/save"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:id="@+id/done"
            />

    </LinearLayout>


</RelativeLayout>