<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <variable
            name="check"
            type="boolean" />

        <variable
            name="vm"
            type="com.marius.valeyou_admin.ui.activity.signup.SignupActivityVM" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <ImageView
            android:id="@+id/iv_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp170"
            android:src="@drawable/login_top_logo"
            android:scaleType="fitXY"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp180">

            <ImageView
                android:layout_width="@dimen/dp120"
                android:layout_height="@dimen/dp80"
                android:src="@drawable/app_logo"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp40"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_below="@+id/iv_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="@dimen/dp10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                style="@style/TextViewStyleSubTitleRegular"
                android:textAllCaps="true"
                android:layout_marginStart="@dimen/dp5"
                android:textSize="@dimen/sp20" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/experience_like_never_before"
                android:layout_marginStart="@dimen/dp5"
                style="@style/TextViewStyleSubTitleRegular"
                android:textColor="@color/grey_light"
                android:textSize="@dimen/sp12"
                android:layout_marginBottom="@dimen/dp10"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel"
                android:layout_margin="@dimen/dp5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_firstName"
                    style="@style/EditText_Regular"
                    android:inputType="textEmailAddress"
                    android:hint="@string/first_name"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel"
                android:layout_margin="@dimen/dp5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_lastname"
                    style="@style/EditText_Regular"
                    android:inputType="textEmailAddress"
                    android:hint="@string/last_name"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel"
                android:layout_margin="@dimen/dp5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/EditText_Regular"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    />

            </com.google.android.material.textfield.TextInputLayout>
           <!-- <TextView
                android:id="@+id/check_email_txt"
                android:layout_width="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp13"
                    app:ccp_countryPreference="in"
                    app:ccp_showArrow="true"
                    android:visibility="gone"
                    app:ccp_showPhoneCode="true"
                    android:layout_height="50dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel"
                android:layout_margin="@dimen/dp5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone"
                    style="@style/EditText_Regular"
                    android:inputType="phone"
                    android:maxLength="14"
                    android:hint="@string/phone"
                     />

            </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/edit_text"
                android:layout_margin="@dimen/dp5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/EditText_Regular"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_warn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dp10"
                android:layout_marginLeft="@dimen/dp8"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dp10"
                android:text="@string/password_validate"
                android:layout_marginLeft="@dimen/dp8"
                />

            <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/conpass_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/edit_text"
                android:theme="@style/TextLabel"
                android:layout_margin="@dimen/dp5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_cnf_password"
                    style="@style/EditText_Regular"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:layout_marginTop="@dimen/dp10">

                <CheckBox
                    android:id="@+id/cv_policy_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp10"
                    android:textColor="@color/grey"
                    style="@style/CheckBoxStyle"/>

                <TextView
                    android:id="@+id/tv_policy_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/policy_terms"
                    android:textSize="13sp"
                    android:fontFamily="@font/sfpro_regular"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:layout_marginTop="@dimen/dp20"
                style="@style/RectangleButtonStyle"
                android:onClick="@{(v)->vm.onClick(v)}"
                android:text="@string/signup_btn"
                android:textColor="@color/white"
                android:foreground="?selectableItemBackground"
                android:textSize="@dimen/sp14" />



            <View
                android:layout_width="match_parent"
                android:layout_height="250dp"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_back"
            android:onClick="@{()->vm.onBack()}"
            android:foreground="?selectableItemBackground"
            android:layout_width="@dimen/dp50"
            android:layout_height="@dimen/dp50"
            android:layout_marginTop="@dimen/dp24"
            android:src="@drawable/ic_back_icon"
            android:padding="@dimen/dp15"
            />

    </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Large.ThreeBounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:layout_marginLeft="150dp"
            android:visibility="@{check?View.VISIBLE:View.GONE}"
            app:SpinKit_Color="?textColorTheme" />

    </FrameLayout>

</layout>