<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="vm"
            type="com.marius.valeyou_admin.ui.fragment.myjob.upcoming.opendetails.CurrentJobDetailsActivityVM" />
        <variable
            name="callback"
            type="com.marius.valeyou_admin.di.base.dialog.BaseCustomDialog.Listener" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp40"
            app:cardCornerRadius="@dimen/dp10">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp10"
                android:elevation="@dimen/dp2">

                <ImageView
                    android:id="@+id/imgClose"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:onClick="@{(v)->callback.onViewClick(v)}"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_delete"/>

                <TextView
                    android:id="@+id/tv_one"
                    style="@style/TextViewStyleSubTitleRegular"
                    android:textSize="18sp"
                     android:layout_centerHorizontal="true"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/no_access_charge"/>

                <TextView
                    android:id="@+id/tvTwo"
                    style="@style/TextViewStyleSubTitleRegular"
                    android:textSize="15sp"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_below="@id/tv_one"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/black"
                    android:text="@string/apply_charges_for_no_access"/>

                
                <LinearLayout
                    android:layout_below="@+id/tvTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:gravity="right"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_marginBottom="@dimen/dp10">

                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="wrap_content"
                        style="@style/RectangleButtonStyle"
                        android:layout_height="@dimen/dp40"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/dp5"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/cardview_light_background"
                        android:onClick="@{(v)->callback.onViewClick(v)}"
                        android:text="@string/no"
                        android:textSize="@dimen/sp14" />

                    <Button
                        android:id="@+id/btn_submit"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp40"
                        android:layout_gravity="center_vertical"
                        style="@style/RectangleButtonStyle"
                        android:onClick="@{(v)->callback.onViewClick(v)}"
                        android:text="@string/yes"
                        android:layout_margin="@dimen/dp5"
                        android:textColor="@color/white"
                        android:foreground="?selectableItemBackground"
                        android:backgroundTint="@color/red_drak"
                        android:textSize="@dimen/sp14" />
                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</layout>