<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.marius.valeyou_admin.ui.activity.forgot.recoverpass.RecoverPasswordActivityVM" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <ImageView
                android:id="@+id/iv_top"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp180"
                android:src="@drawable/login_top_logo"
                android:scaleType="fitXY"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp180">

                <ImageView
                    android:layout_width="@dimen/dp120"
                    android:layout_height="@dimen/dp80"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/dp40"
                    android:src="@drawable/ic_change_password_icon"
                    android:tint="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_login"
                android:layout_below="@+id/iv_top"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/white"
                android:padding="@dimen/dp10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Recovery Password?"
                    style="@style/TextViewStyleSubTitleRegular"
                    android:layout_marginStart="@dimen/dp5"
                    android:textSize="@dimen/sp20" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recover_details"
                    android:layout_marginStart="@dimen/dp5"
                    style="@style/TextViewStyleSubTitleRegular"
                    android:textColor="@color/grey_light"
                    android:textSize="@dimen/sp12"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_marginBottom="@dimen/dp30"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    android:layout_margin="@dimen/dp5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_auth"
                        style="@style/EditText_Regular"
                        android:inputType="textEmailAddress"
                        android:hint="@string/code"
                        android:text="ASF26543" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    android:layout_margin="@dimen/dp5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        style="@style/EditText_Regular"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:text="ASF26543" />

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    android:layout_margin="@dimen/dp5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_cnf_password"
                        style="@style/EditText_Regular"
                        android:inputType="textPassword"
                        android:hint="@string/confirm_password"
                        android:text="ASF26543" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btn_done"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp40"
                    android:layout_gravity="center_vertical"
                    style="@style/RectangleButtonStyle"
                    android:onClick="@{(v)->vm.onClick(v)}"
                    android:text="@string/change_password"
                    android:layout_marginStart="@dimen/dp5"
                    android:layout_marginTop="@dimen/dp30"
                    android:layout_marginEnd="@dimen/dp5"
                    android:textColor="@color/white"
                    android:foreground="?selectableItemBackground"
                    android:textSize="@dimen/sp14" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</layout>